# Comfyui-Yolov8-JSON

./: .gitignore  README.md  __init__.py  node.py  pyproject.toml  requirements.txt
docs/: workflow.json  workflow1.json
readme/: README.zh_CN.md
web/js/: model.core.js
