[project]
name = "comfyui-yolov8-json"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["Comfyui-Toolbox", "ultralytics", "numpy", "torch", "PIL"]

[project.urls]
Repository = "https://github.com/prodogape/Comfyui-Yolov8-JSON"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-Yolov8-JSON"
Icon = ""
